<resources>
    <string name="app_name">dUAck</string>
    <string name="saludo">¡Hola, soy dUAck, tu guía sobre turismo! ¿Qué quieres saber?</string>
    <string name="username">597cbfb8-bd21-4d03-9b2d-fb9a0884b390</string>
    <string name="password">68cxpwUxwX5s</string>
    <string name="workspace">145540c7-0fb5-4bea-bf64-cb30ccc72c90</string>
    <string name="sin_gps">Vaya, no consigo obtener tu ubicación. Intenta conectar el GPS o cambiar a modo búsqueda por localidad en preferencias y pregúntame de nuevo.</string>
    <string name="permisos_gps">Si me das los permisos necesarios comprobaré la distancia con tu ubicación.</string>
    <string name="fin_chat">¿Quieres realizar alguna otra consulta?</string>
    <string name="salir">¡Espero haberte ayudado! ¡Hasta la próxima!</string>
    <string name="nueva_consulta">¡Genial! En ese caso, adelante con tu nueva consuta</string>
    <string name="lugar_interes_datos">Muy bien, aunque podría reducir la búsqueda si me contestas las siguientes preguntas. En caso de que quieras los resultados, contesta en alguna de mis preguntas FIN</string>
    <string name="datos_coste">¿Buscas que sea gratis o cuál es el coste máximo de entrada que quieres pagar?</string>
    <string name="datos_guia">¿Quieres que, a ser posible, el sitio que buscas tenga guía o no?</string>
    <string name="datos_idioma">¿Quieres que se hable algún idioma en particular?</string>
    <string name="datos_tipo">El lugar turístico que buscas, ¿es de algún tipo en concreto? Si no sabes qué tipos hay, pulsa el botón naranja.</string>
    <string name="datos_sub_tipo">Para acabar, el lugar de interés turístico que buscas, ¿es de algún subtipo en concreto? Si no sabes qué subtipos hay, pulsa el botón naranja</string>
    <string name="un_dato">He encontrado un lugar con la descripción que me has dado. Te lo muestro en seguida.</string>
    <string name="varios_datos_1">He encontrado</string>
    <string name="varios_datos_2">lugares con la descripcion que me has dado. Te los muestro en seguida.</string>
    <string name="server_inactivo_titulo">Servidor inactivo</string>
    <string name="server_inactivo_mensaje">El servidor de base de datos no está activo en este momento. Vuelva a intentarlo más tarde.</string>
    <string name="server_ya_actualizado_title">BD local actualizada</string>
    <string name="server_ya_actualizado_mensaje">La base de datos local ya está actualizada, no es necesario volverla a actualizar</string>
    <string name="server_no_actualizado_title">BD local por actualizar</string>
    <string name="server_no_actualizado_mensaje">Hay datos en el servidor que no has instalado en tu base de datos local. ¿Deseas instalarlos?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>

    <string name="tipos">Tipos</string>
    <string name="palabra_clave">Palabra clave</string>
    <string name="significado">Significado</string>
    <string name="museo">Museo</string>
    <string name="sinonimos_museo">Museos, galerías, exposiciones</string>
    <string name="teatro">Teatro</string>
    <string name="sinonimos_teatro">Teatros, anfiteatros, auditorios</string>
    <string name="jardin">Jardin</string>
    <string name="sinonimos_jardin">Jardines, parques, zonas verdes</string>
    <string name="plaza">Plaza</string>
    <string name="sinonimos_plaza">Plazas</string>
    <string name="iglesia">Iglesia</string>
    <string name="sinonimos_iglesia">Iglesias, parroquias, templos, catedrales, basílicas, ermitas, santuarios</string>
    <string name="estadio">Estadio</string>
    <string name="sinonimos_estadio">Estadios, campos de fútbol, pistas de atletismo</string>
    <string name="castillo">Castillo</string>
    <string name="sinonimos_castillo">Castillos, fortalezas, ciudadelas</string>
    <string name="yacimiento">Yacimiento</string>
    <string name="sinonimos_yacimiento">Yacimientos, minas, canteras</string>
    <string name="edificio">Edificio</string>
    <string name="sinonimos_edificio">Edificios, casas, fachadas, viviendas</string>
    <string name="subtipos">Subtipos</string>
    <string name="calzado">Calzado</string>
    <string name="calzado_disponible">Museos</string>
    <string name="arte">Arte</string>
    <string name="arte_disponible">Museos</string>
    <string name="arqueologico">Arqueológico</string>
    <string name="arqueologico_disponible">Museos</string>
    <string name="etnologico">Etnológico</string>
    <string name="etnologico_disponible">Yacimientos</string>
    <string name="tipos_disponibles">Tipos disponibles</string>
    <string name="por_ubicacion">Por ubicación</string>
    <string name="por_ubicacion_summary">Busca lugares cercanos a tu ubicación actual.</string>
    <string name="por_pais">Por país</string>
    <string name="por_pais_summary">La búsqueda se realiza en el país seleccionado.</string>
    <string name="por_provincia">Por provincia</string>
    <string name="por_provincia_summary">La búsqueda se realiza en la provincia seleccionada.</string>
    <string name="por_localidad">Por localidad</string>
    <string name="por_localidad_summary">La búsqueda se realiza en la localidad seleccionada.</string>
    <string name="distancia">Distancia</string>
    <string name="distancia_summary">Se buscará en el radio máximo de distancia aquí apuntando.</string>
    <string name="por_no_ubicacion">Búsqueda por localidad</string>
    <string name="bus_por_ubicacion">Búsqueda por ubicación</string>
    <string name="acerca_de">dUAck es un trabajo de fin de grado realizado en la Universidad de Alicante por el alumno Eduardo Navarro Poveda el curso 2017/2018.</string>
    <string name="gmail_contacto">Email de contacto: duackchatbot@gmail.com</string>

    <string name="irrelevante">(Si el dato no te parece importante, escribe PASO)</string>
    <string name="ibm_no_responde">He perdido la conexión con Internet. ¡Comprueba tu conexión y vuelve a intentarlo!</string>
    <string name="location_null">¡Vaya! No estoy detectando bien tu ubicación. Intenta salir de la aplicación y volver a entrar con el GPS activado.</string>
    <string name="error_no_datos">Vaya, lo siento. No tengo conocimiento de ningún sitio como el que me has descrito.</string>
    <string name="error_no_datos_ubicacion">Ya que estás en modo ubicación, quizás si aumentas la distancia en preferencias y me vueves a preguntar, encuentro algo.</string>
    <string name="error_no_mensaje">Introduce un mensaje</string>
    <string name="error_precio_incorrecto">Introduce un numero decimal, PASO o FIN</string>
    <string name="error_salir_incorrecto">Pulse uno de los botones naranjas</string>
    <string name="error_tipo_incorrecto">El tipo introducido es incorrecto o no está disponible.</string>
    <string name="error_idioma_incorrecto">El idioma introducido es incorrecto o no está disponible.</string>
    <string name="error_subtipo_incorrecto">El subtipo introducido es incorrecto o no está disponible.</string>
    <string name="error_dato_espacio">Las respuestas deben ser en una sola palabra, sin espacios</string>
    <string name="beta_error_nombre">ERROR EN BUSQUEDA NOMBRE</string>
    <string name="beta_error_modificar_datos">ERROR EN MODIFICAR DATOS</string>
</resources>
