<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/agua"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:src="@drawable/duackcompleto" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/tipos"
                android:textColor="@color/colorAccent"
                android:textSize="25dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#8c8b9c" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/palabra_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/palabra_clave"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/palabra_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/significado"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#8c8b9c" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/boton_museo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/borde_redondo"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/museo"
                    android:textColor="@android:color/background_light"
                    android:textSize="15dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/museo_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/sinonimos_museo"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#8c8b9c" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/boton_teatro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/borde_redondo"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/teatro"
                    android:textColor="@android:color/background_light"
                    android:textSize="15dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/teatro_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/sinonimos_teatro"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#8c8b9c" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/boton_jardin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/borde_redondo"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/jardin"
                    android:textColor="@android:color/background_light"
                    android:textSize="15dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/jardin_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/sinonimos_jardin"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#8c8b9c" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/boton_plaza"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/borde_redondo"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/plaza"
                    android:textColor="@android:color/background_light"
                    android:textSize="15dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/plaza_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/sinonimos_plaza"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#8c8b9c" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/boton_iglesia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/borde_redondo"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/iglesia"
                    android:textColor="@android:color/background_light"
                    android:textSize="15dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/iglesia_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/sinonimos_iglesia"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#8c8b9c" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/boton_estadio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/borde_redondo"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/estadio"
                    android:textColor="@android:color/background_light"
                    android:textSize="15dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/estadio_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/sinonimos_estadio"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#8c8b9c" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/boton_castillo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/borde_redondo"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/castillo"
                    android:textColor="@android:color/background_light"
                    android:textSize="15dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/castillo_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/sinonimos_castillo"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#8c8b9c" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/boton_yacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/borde_redondo"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/yacimiento"
                    android:textColor="@android:color/background_light"
                    android:textSize="14dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/yacimiento_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/sinonimos_yacimiento"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/boton_edificio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/borde_redondo"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/edificio"
                    android:textColor="@android:color/background_light"
                    android:textSize="15dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/edificio_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/sinonimos_edificio"
                    android:textSize="15dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>