<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/agua"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:src="@drawable/duackcompleto" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/subtipos"
                android:textColor="@color/colorAccent"
                android:textSize="25dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#8c8b9c" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/palabra_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/palabra_clave"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/palabra_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/tipos_disponibles"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#8c8b9c" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/boton_calzado"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/borde_redondo"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/calzado"
                    android:textColor="@android:color/background_light"
                    android:textSize="13dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/museo_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/calzado_disponible"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#8c8b9c" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/boton_arte"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/borde_redondo"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/arte"
                    android:textColor="@android:color/background_light"
                    android:textSize="13dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/teatro_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/arte_disponible"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#8c8b9c" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/boton_arqueologico"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/borde_redondo"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/arqueologico"
                    android:textColor="@android:color/background_light"
                    android:textSize="11dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/jardin_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/arqueologico_disponible"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#8c8b9c" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/boton_etnologico"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/borde_redondo"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/etnologico"
                    android:textColor="@android:color/background_light"
                    android:textSize="13dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/plaza_sino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/etnologico_disponible"
                    android:textSize="15dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>